force-app/main/default/objects/Payment_Method__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>