force-app/main/default/objects/Payment_Method__c/fields/Account_Token__c.field-meta.xml
<CustomField>
    <fullName>Account_Token__c</fullName>
    <label>Account Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>