force-app/main/default/objects/Payment_Method__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <description>Storing the last 4 digits of the card to be displayed on the mobile app</description>
    <label>Card Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>