force-app/main/default/objects/Payment_Method__c/fields/is_Expired__c.field-meta.xml
<CustomField>
    <fullName>is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Expired</label>
    <type>Checkbox</type>
</CustomField>