force-app/main/default/objects/Payment_Method__c/fields/isDefault__c.field-meta.xml
<CustomField>
    <fullName>isDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <label>is_Default</label>
    <type>Checkbox</type>
</CustomField>