force-app/main/default/objects/Payment_Method__c/fields/Partner_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_Id__c</fullName>
    <label>Partner User Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>