force-app/main/default/objects/Payment_Method__c/fields/Replace_Card__c.field-meta.xml
<CustomField>
    <fullName>Replace_Card__c</fullName>
    <formula>Days_Until_Expiration__c &lt; $Setup.Proesis_Settings__c.Payment_Method_Expiry_Warning_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replace Card?</label>
    <type>Checkbox</type>
</CustomField>