force-app/main/default/objects/Payment_Method__c/fields/User_Requested_Replace_Card__c.field-meta.xml
<CustomField>
    <fullName>User_Requested_Replace_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Requested Replace Card</label>
    <type>Checkbox</type>
</CustomField>